--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@ CC dimmer low voltage.xml
 fp-info.cache
 fp-lib-table
 sym-lib-table
-
-
+jlcpcb + kicad 5, how to genereate gerber + drill files.pdf
+pcbway + kicad 5, how to genereate gerber + drill files.pdf
