--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 /.git
+/gerber + drill/2021-10-29
+/gerber + drill/2021-10-30
+/gerber + drill/2021-11-02
+/gerber + drill/2021-11-03
+/gerber + drill/2021-11-04
+/gerber + drill/2021-11-05
+/gerber + drill/2021-11-06
+/gerber + drill/2021-11-07
+/gerber + drill/2021-11-08
+/gerber + drill/2021-11-09
+/gerber + drill/2021-11-10
 *.lib
 *.bck
 *.dcm
