--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,5 @@ sym-lib-table
 # ignoring specific files
 jlcpcb + kicad 5, how to genereate gerber + drill files.pdf
 pcbway + kicad 5, how to genereate gerber + drill files.pdf
+schematic-8ch-constant-current-LED-driver.pdf
 
