--- a/esphome/8ch-cc-led-driver.yaml
+++ b/esphome/8ch-cc-led-driver.yaml
@@ -1,45 +1,47 @@
 ---
-#############################################################
-# 8 channel led driver constant current (max 290mA per ch)  #
-#############################################################
+#########################################
+# 8 channel led driver constant current #
+#########################################
+
+# code made for board v0.98, 2021-12-12
 
 # esp board model:  MH-ET LIVE ESP32 MiniKit
 
 # Pinout reference
 # ================
-#--------------------------------------------
-#| GPIO | Board	  | Use                     |
-#|------|---------|-------------------------|
-#|  04  | U20  	  | dallas temp. sensor     |
-#|------|---------|-------------------------|
-#|  05  | J10     | momentary switch        |
-#|------|---------|-------------------------|
-#|  13  | J1013	  | free to use male header |
-#|------|---------|-------------------------|
-#|  16  | LED1	  | LED1 dimming (pwm)      |
-#|------|---------|-------------------------|
-#|  17  | LED2	  | LED2 dimming (pwm)      |
-#|------|---------|-------------------------|
-#|  18  | LED3	  | LED3 dimming (pwm)      |
-#|------|---------|-------------------------|
-#|  19  | LED4	  | LED4 dimming (pwm)      |
-#|------|---------|-------------------------|
-#|  21  | LED5    | LED5 dimming (pwm)      |
-#|------|---------|-------------------------|
-#|  22  | LED6	  | LED6 dimming (pwm)      |
-#|------|---------|-------------------------|
-#|  23  | LED7    | LED7 dimming (pwm)      |
-#|------|---------|-------------------------|
-#|  25  | LED8    | LED8 dimming (pwm)      |
-#|------|---------|-------------------------|
-#|  26	| J20  	  | rotary encoder pin A    |
-#|------|---------|-------------------------|
-#|  27  | J20  	  | rotary encoder pin B    |
-#|------|---------|-------------------------|
-#|  32  | J10  	  | motion sensor (pir)     |
-#|------|---------|-------------------------|
-#|  33  | J1033   | free to use male header |
-#--------------------------------------------
+# ---------------------------------------
+# | GPIO | Board | Usage                |
+# |------|-------|----------------------|
+# |  04  | U20   | dallas temp. sensor  |
+# |------|-------|----------------------|
+# |  05  | J130  | momentary switch     |
+# |------|-------|----------------------|
+# |  13  | J110	 | free to use GPIO     |
+# |------|-------|----------------------|
+# |  16  | LED1	 | LED1 dimming (pwm)   |
+# |------|-------|----------------------|
+# |  17  | LED2	 | LED2 dimming (pwm)   |
+# |------|-------|----------------------|
+# |  18  | LED3	 | LED3 dimming (pwm)   |
+# |------|-------|----------------------|
+# |  19  | LED4	 | LED4 dimming (pwm)   |
+# |------|-------|----------------------|
+# |  21  | LED5  | LED5 dimming (pwm)   |
+# |------|-------|----------------------|
+# |  22  | LED6	 | LED6 dimming (pwm)   |
+# |------|-------|----------------------|
+# |  23  | LED7  | LED7 dimming (pwm)   |
+# |------|-------|----------------------|
+# |  25  | LED8  | LED8 dimming (pwm)   |
+# |------|-------|----------------------|
+# |  26  | J130  | rotary encoder pin A |
+# |------|-------|----------------------|
+# |  27  | J130  | rotary encoder pin B |
+# |------|-------|----------------------|
+# |  32  | J120  | motion sensor (pir)  |
+# |------|-------|----------------------|
+# |  33  | J110  | free to use GPIO     |
+# ---------------------------------------
 
 ##### basic configs #####
 
@@ -98,7 +100,7 @@ time:
   - platform: homeassistant
     id: homeassistant_time
     on_time:
-        # device restart (5 minutes after dhcp router and WiFi APs reboot)
+        # device restart (5 minutes after scheduled dhcp router and WiFi APs reboot)
       - days_of_week: SUN
         hours: 4
         minutes: 35
@@ -122,7 +124,7 @@ web_server:
 
 dallas:
   - pin: GPIO04
-    update_interval: 144s # reads out 25/hour, 600/day
+    update_interval: 72s # reads out 50/hour, 1200/day
 
 ##### start specific configs #####
 
@@ -184,12 +186,12 @@ light:
     gamma_correct: ${my_gamma_correct}
     effects:
       - lambda:
-          name: 'Fader 30-100% - 30sec'
+          name: 'Fader 30-100% - 20sec'
           update_interval: 30000ms
           lambda: |-
             static int state = 0;
             auto call = id(downlight_01).turn_on();
-            call.set_transition_length(29500);
+            call.set_transition_length(19500);
             call.set_brightness((state * 0.7) + 0.3);
             call.perform();
             state = 1 - state;    
@@ -202,12 +204,12 @@ light:
     gamma_correct: ${my_gamma_correct}
     effects:
       - lambda:
-          name: 'Fader 30-100% - 30sec'
+          name: 'Fader 30-100% - 20sec'
           update_interval: 30000ms
           lambda: |-
             static int state = 0;
             auto call = id(downlight_02).turn_on();
-            call.set_transition_length(29500);
+            call.set_transition_length(19500);
             call.set_brightness((state * 0.7) + 0.3);
             call.perform();
             state = 1 - state;   
@@ -220,12 +222,12 @@ light:
     gamma_correct: ${my_gamma_correct}
     effects:
       - lambda:
-          name: 'Fader 30-100% - 30sec'
+          name: 'Fader 30-100% - 20sec'
           update_interval: 30000ms
           lambda: |-
             static int state = 0;
             auto call = id(downlight_03).turn_on();
-            call.set_transition_length(29500);
+            call.set_transition_length(19500);
             call.set_brightness((state * 0.7) + 0.3);
             call.perform();
             state = 1 - state; 
@@ -238,12 +240,12 @@ light:
     gamma_correct: ${my_gamma_correct}
     effects:
       - lambda:
-          name: 'Fader 30-100% - 30sec'
+          name: 'Fader 30-100% - 20sec'
           update_interval: 30000ms
           lambda: |-
             static int state = 0;
             auto call = id(downlight_04).turn_on();
-            call.set_transition_length(29500);
+            call.set_transition_length(19500);
             call.set_brightness((state * 0.7) + 0.3);
             call.perform();
             state = 1 - state;
@@ -256,12 +258,12 @@ light:
     gamma_correct: ${my_gamma_correct}
     effects:
       - lambda:
-          name: 'Fader 30-100% - 30sec'
+          name: 'Fader 30-100% - 20sec'
           update_interval: 30000ms
           lambda: |-
             static int state = 0;
             auto call = id(downlight_05).turn_on();
-            call.set_transition_length(29500);
+            call.set_transition_length(19500);
             call.set_brightness((state * 0.7) + 0.3);
             call.perform();
             state = 1 - state;
@@ -274,12 +276,12 @@ light:
     gamma_correct: ${my_gamma_correct}
     effects:
       - lambda:
-          name: 'Fader 30-100% - 30sec'
+          name: 'Fader 30-100% - 20sec'
           update_interval: 30000ms
           lambda: |-
             static int state = 0;
             auto call = id(downlight_06).turn_on();
-            call.set_transition_length(29500);
+            call.set_transition_length(19500);
             call.set_brightness((state * 0.7) + 0.3);
             call.perform();
             state = 1 - state;
@@ -298,7 +300,7 @@ light:
           lambda: |-
             static int state = 0;
             auto call = id(downlight_07).turn_on();
-            call.set_transition_length(29500);
+            call.set_transition_length(19500);
             call.set_brightness((state * 0.7) + 0.3);
             call.perform();
             state = 1 - state;
@@ -312,12 +314,12 @@ light:
 
     effects:
       - lambda:
-          name: 'Fader 30-100% - 30sec'
+          name: 'Fader 30-100% - 20sec'
           update_interval: 30000ms
           lambda: |-
             static int state = 0;
             auto call = id(downlight_08).turn_on();
-            call.set_transition_length(29500);
+            call.set_transition_length(19500);
             call.set_brightness((state * 0.7) + 0.3);
             call.perform();
             state = 1 - state;
@@ -347,6 +349,10 @@ sensor:
             id: delta_onboard_temperature
             state: !lambda return (id(onboard_temperature).state) - (id(prev_onboard_temperature).state);
         # might add a notification if delta_onboard_temperature is bigger than 3°C in 144sec
+    filters:
+      # do not report changes lower than +-0.1°C
+      - delta: 0.1
+
 
   - platform: template
     id: prev_onboard_temperature
@@ -555,7 +561,7 @@ sensor:
       - lambda: 'if (isnan(x)) return{}; else return(x);'
 
   # - !include common/sensors/wifi_signal_percents.yaml
-    # WiFi rssi in percents
+  # # WiFi rssi in percents
   - platform: template
     name: '${my_name} WiFi signal'
     id: wifi_rssi
@@ -573,7 +579,6 @@ sensor:
     filters:
       # delete not a number or state value
       - lambda: 'if (isnan(x)) return{}; else return(x);'
-
       # do not report changes lower than +-1%
       - delta: 1.0
 
@@ -594,7 +599,7 @@ text_sensor:
   - platform: template
     name: '${my_name} MAC'
     icon: mdi:minus-network-outline
-    update_interval: 12min
+    update_interval: 6min
     lambda: |-
       return {WiFi.macAddress().c_str()};
 
